# kolorfill

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README
autotests/: CMakeLists.txt  kolorfillutilstest.cpp  tst_createBoard.qml  tst_fill.qml  tst_neighbors.qml  tst_win.qml
poqm/ar/: kolorfill_qt.po
poqm/ca/: kolorfill_qt.po
poqm/ca@valencia/: kolorfill_qt.po
poqm/cs/: kolorfill_qt.po
poqm/de/: kolorfill_qt.po
poqm/el/: kolorfill_qt.po
poqm/en_GB/: kolorfill_qt.po
poqm/eo/: kolorfill_qt.po
poqm/es/: kolorfill_qt.po
poqm/eu/: kolorfill_qt.po
poqm/fi/: kolorfill_qt.po
poqm/fr/: kolorfill_qt.po
poqm/ga/: kolorfill_qt.po
poqm/gl/: kolorfill_qt.po
poqm/he/: kolorfill_qt.po
poqm/hi/: kolorfill_qt.po
poqm/ia/: kolorfill_qt.po
poqm/it/: kolorfill_qt.po
poqm/ja/: kolorfill_qt.po
poqm/ka/: kolorfill_qt.po
poqm/ko/: kolorfill_qt.po
poqm/lt/: kolorfill_qt.po
poqm/lv/: kolorfill_qt.po
poqm/nl/: kolorfill_qt.po
poqm/nn/: kolorfill_qt.po
poqm/pl/: kolorfill_qt.po
poqm/pt/: kolorfill_qt.po
poqm/pt_BR/: kolorfill_qt.po
poqm/ro/: kolorfill_qt.po
poqm/sk/: kolorfill_qt.po
poqm/sl/: kolorfill_qt.po
poqm/sv/: kolorfill_qt.po
poqm/tr/: kolorfill_qt.po
poqm/ug/: kolorfill_qt.po
poqm/uk/: kolorfill_qt.po
poqm/x-test/: kolorfill_qt.po
poqm/zh_CN/: kolorfill_qt.po
poqm/zh_TW/: kolorfill_qt.po
snap/: snapcraft.yaml
src/: CMakeLists.txt  Messages.sh  highscore.cpp  highscore.h  kolorfill.desktop  main.cpp  org.kde.kolorfill.appdata.xml  org.kde.kolorfill.desktop  org.kde.kolorfill.metainfo.xml  resources.qrc
src/qml/: GameArea.qml  Help.qml  HighScoreView.qml  KolorFillUtils.js  Winner.qml  main.qml
